# libiht-user

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI-linux.yml
include/: iht.h
include/iht/: errno.h  linux.h  version.h  win.h
src/: bts.c  iht-common.c  iht-common.h  iht-ioctl.h  lbr.c  trace.c  version.c
src/linux/: ioctl.c
